Fixing scrollbar and theming not respecting localstorage  (#14)
* Fixing scrollbar and flashing localstorage issues

* update

* fonts?

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* font-family: 'Montserrat Variable', sans-serif; */
+/* font-family: 'Noto Sans JP Variable', sans-serif; */
+
+:root {
+  --font-noto: "Noto Sans JP Variable", sans-serif;
+  --font-mont: "Montserrat Variable", sans-serif;
+}
+
+body {
+  margin: 0;
+}
